css/planetaDesktop.css
/*
Theme: Raw Warriors;
Version : Versión 1 de Junio
*/
html{
  overflow: auto !important;
  /*height: auto;*/

}
body{
  overflow: auto !important;
  height: auto;

  -webkit-transition: all 0.5s ease-out;
  -moz-transition: all 0.5s ease-out;
  -ms-transition: all 0.5s ease-out;
  -o-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}
.bodyBackDeg{
  background: rgba(14,38,53,1);
  background: -moz-radial-gradient(center, ellipse cover, rgba(14,38,53,1) 0%, rgba(14,38,53,1) 10%, rgba(0,0,0,1) 100%);
  background: -webkit-radial-gradient(center, ellipse cover, rgba(14,38,53,1) 0%, rgba(14,38,53,1) 10%, rgba(0,0,0,1) 100%);
  background: -o-radial-gradient(center, ellipse cover, rgba(14,38,53,1) 0%, rgba(14,38,53,1) 10%, rgba(0,0,0,1) 100%);
  background: -ms-radial-gradient(center, ellipse cover, rgba(14,38,53,1) 0%, rgba(14,38,53,1) 10%, rgba(0,0,0,1) 100%);
  background: radial-gradient(ellipse at center, rgba(14,38,53,1) 0%, rgba(14,38,53,1) 10%, rgba(0,0,0,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e2635', endColorstr='#000000', GradientType=1 );
}
.bodyBackNoDeg{
  background: #f6eed9;
}


h2 {
    font-size: 1.4rem;
    width: 60%;
    margin-left: 20%;
    letter-spacing: 3px;
    font-family: 'Garamond B', sans-serif;
}
p {
    width: 60%;
    margin-left: 20%;
    font-size: 1.2rem;
    line-height: 1.2;
    letter-spacing: 1px;
}
.commentsDisqus{
  position: fixed;
  width: 100vw;
  height: 100vh;
  background: #f6eed9;
  z-index: 9000;
  top: 100vh;
  opacity: 0;
  display: none;

  -webkit-transition: all 0.5s ease-out;
  -moz-transition: all 0.5s ease-out;
  -ms-transition: all 0.5s ease-out;
  -o-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}
.commentsDisqus>h3{
  position: absolute;
  top: 35px;
  left: 30px;
  font-size: 1.2rem;
  height: 30px;
}
.closeDisqus{
  position: absolute;
  top: 30px;
  right: 30px;
  width: 30px;
  cursor: pointer;
}
.borradorDisqus{
  position: absolute;
  top: 100px;
  width:99%;
}

#main {
    position: relative;
    width: 100vw;
    height: auto;
    padding-bottom: 0;
    overflow: hidden;
    background: none;
}


#sliderArrows{
  display: block;
  position: absolute;
  width: 90vw;
  height: 40px;
  left: 5vw;
  top: calc(50vh - 30px);
  z-index: 2000;
}
#sliderArrows>a{
  display: inline-block;
  width: 80px;
  height: 100%;
  cursor: pointer;
}
#sliderArrows>a>img{ height: 100%;}
/* arrow next  */
#sliderArrows>a:nth-child(3), #sliderArrows>a:nth-child(2){
  float: right;
  text-align: right;
}
/* arrow prev */
#arrowPrev >img{
  -webkit-transform: scaleX(-1);
  -moz-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  transform: scaleX(-1);
  text-align: left;
}
#sliderGif{
  position: relative;
  width: 420px;
  height: 420px;
  left: calc(50% -  240px);
  top: 20px;
  overflow: hidden;
  /*border: 1px solid red;*/
}

#readMoreTitle{
  width: 100%;
  text-align: center;
  color: #f6eed9;
  letter-spacing: 2px;
  margin-top: 70px;
}

#sliderCount{
  position: relative;
  width: 400px;
  height: 40px;
  left: calc(50% - 200px);
  margin-top: 50px;
  text-align: center;
}

#sliderCount> li{
  float: left;
  width: 14%;
  height: 100%;
  text-align: center;
}

#sliderCount> li> a> span{
  width: 7px;
  height: 7px;
  display: block;
  background: #f6eed9;
  border-radius: 50%;
  margin: 15px auto;
  cursor: pointer;

  -webkit-transition: all 0.4s ease-out;
  -moz-transition: all 0.4s ease-out;
  -ms-transition: all 0.4s ease-out;
  -o-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
}


#margin{
  position: relative;
  width: 100vw;
  height: 30px;
  left: 0;
  z-index: 5;
}

#btnFlecha{
  position: relative;
  display: block;
  width: 10%;
  height: 60px;
  left: 45%;
  overflow-y: hidden;
  opacity: 1;
  margin-top: 20px;
  overflow: hidden;
}

#flecha{
    position: relative;
    width: 90px;
    height: 60px;
    display: inline-block;
    left: calc(50% - 45px);

    -webkit-animation: linea 4s infinite;
    -webkit-animation-timing-function: ease-out;

    -moz-animation: linea 4s infinite;
    -moz-animation-timing-function: ease-out;

    -ms-animation: linea 4s infinite;
    -ms-animation-timing-function: ease-out;

    -o-animation: linea 4s infinite;
    -o-animation-timing-function: ease-out;

    animation: linea 4s infinite;
    animation-timing-function: ease-out;
  }

.show{
  display: block !important;
}

.scaleUp{
  transform: scale(2.3);
}

#infoMore{
  position: relative;
  left: 0;
  width: 100vw;
  height: auto;
  opacity: 1;
  color: #0e2635;
  padding-bottom: 50px;
}
#infoMore> section{
display: none;
}
.gifInfo{
  opacity: 0;

  -webkit-transition: opacity 1s ease-out;
  -moz-transition: opacity 1s ease-out;
  -ms-transition: opacity 1s ease-out;
  -o-transition: opacity 1s ease-out;
  transition: opacity 1s ease-out;
}
.gifinfo> h2{
  font-size: 1.4rem;
  width: 80%;
  margin-left: 20%;
  letter-spacing: 3px;
  font-family: 'Garamond B', sans-serif;
}
.gifinfo> p{
  width: 60%;
  margin-left: 20%;
  font-size: 1.2rem;
  line-height: 1.2;
  letter-spacing: 1px;
}
.count1t7{
  display: inline-block;
  padding: 15px;
  text-align: center;
  float: right;
}
#moreVideoW{
  width: 100%;
  height: 50px;
  line-height: 50px;
  margin-top: 5%;
  text-align: center;
}
#moreVideoW>a{
  display: inline-block;
  width: 170px;
  height: 45px;
  line-height: 45px;
  border: 1px solid #0e2635;
  text-decoration: none;
  color: #0e2635;
  text-transform: uppercase;
  letter-spacing: 3px;
  font-family: 'Garamond B', sans-serif;
  margin: 10px auto;
  cursor: pointer;

  -webkit-transition: background 0.5s ease-out;
  -moz-transition: background 0.5s ease-out;
  -ms-transition: background 0.5s ease-out;
  -o-transition: background 0.5s ease-out;
  transition: background 0.5s ease-out;
}
#moreVideoW>a:hover{
  background: #0e2635;
  color: #f6eed9;
}
#moreVideoW>a:first-child{
  margin-right: 10px;
}
#sharePost{
  display: block;
  width:30%;
  height: auto;
  padding-bottom: 30px;
  margin-top: 50px;
  margin-left: 35%;
  text-align: center;
}
#sharePost>h4{
  font-family: 'Garamond B', sans-serif;
  height: 25px;
  line-height: 25px;
}
#sharePost>ul{
  margin-top: 5%;
  display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;

  flex-direction: row;
	-webkit-flex-direction:row;
  align-items: center;
  -webkit-align-items: center;
  justify-content: space-around;
  -webkit-justify-content: space-around;
}

#sharePost>ul>li>a{
  font-family: 'Garamond DI', sans-serif;
  text-decoration: none;
  color: #0e2635;
  font-size: 1.4rem;
}

#eW{
	position: absolute;
	width:450px;
	height: 450px;
  top: 80px;
  left: calc(50% - 215px);
  z-index: 500;

	-webkit-animation: rotE 50s linear infinite;
  -moz-animation: rotE 50s linear infinite;
  -ms-animation: rotE 50s linear infinite;
  -o-animation: rotE 50s linear infinite;
  animation: rotE 50s linear infinite;
}
.b{
	position: absolute;
	display: block;
	background: #f6eed9;
  -webkit-box-shadow: 0px 0px 20px 7px rgba(244,237,216,0.3);
  -moz-box-shadow: 0px 0px 20px 7px rgba(244,237,216,0.3);
  box-shadow: 0px 0px 20px 7px rgba(244,237,216,0.3);
  -webkit-animation: glow 5s linear infinite;
  -moz-animation: glow 5s linear infinite;
  -ms-animation: glow 5s linear infinite;
  -o-animation: glow 5s linear infinite;
  animation: glow 5s linear infinite;
}
.bG{
	width:25px;
	height: 25px;
  border-radius: 50%;
}
.bM{
	width:13px;
	height: 13px;
  border-radius: 50%;
}
.bC{
	width:8px;
	height: 8px;
}

#seeInfo{
  color: #f6eed9;
  display: block;
  text-align: center;
  padding: 10px 0 5px 0;
}


@-webkit-keyframes rotE { 100% { transform: rotate(360deg); } }
@-moz-keyframes rotE { 100% { transform: rotate(360deg); } }
@-ms-keyframes rotE { 100% { transform: rotate(360deg); } }
@-o-keyframes rotE { 100% { transform: rotate(360deg); } }
@keyframes rotE { 100% { transform: rotate(360deg); } }



@-webkit-keyframes linea {
  0% { height: 60px; }
  60%{ height: 0;}
  100% { height: 60px;}
}
@-moz-keyframes linea {
  0% { height: 60px; }
  60%{ height: 0; }
  100% { height: 60px; }
}
@-ms-keyframes linea {
  0% { height: 60px; }
  60%{ height: 0; }
  100% { height: 60px; }
}
@-o-keyframes linea {
  0% { height: 60px; }
  60%{ height: 0; }
  100% { height: 60px; }
}
@keyframes linea {
  0% { height: 60px; }
  60%{ height: 0; }
  100% { height: 60px; }
}


@media screen and (max-width:600px){
  #sliderArrows{
    display: none;
  }
}

@media screen and (max-width:400px){
  #sharePost{
    margin-top: 150px;
  }
}

#disqus_thread{
  margin-top: 80px;
}

